xx.xx.2006 [REV ]
    docs:
        - Updated library, module and developer documentation to reflect new additions.
    gui.console:
        - Extended status bar to contain connection information.
        - Added notion of "current user".
        - Added menu option to save current connection settings / options.
        - Added menu option to easily restore all saved connection settings.
    gui.peek:
        - New GUI module. Essentially the next version of proc peek (cmd line version now obsoleted).
    gui.pstalker:
        - Added timestamp column.
        - Made columns sortable.
    pgraph:
        - Set default depth for graph_down() and graph_up() to infinite.
        - Added logic to correctly handle newlines in node/edge labels during uDraw rendering.
        - Added 'image' and 'info' (mouse over popup) support to uDraw rendering.
    pydbg:
        - Improved detection of system breakpoints by resolving ntdll!DbgBreakPoint.
        - Added logic for compatability with DebugBreakProcess() API.
        - Bug fix in context dump (EBP was being resolved as ESI).
        - Added MSR read/write support: read_msr(), write_msr().
        - Added optional 'hex_dump' flag to smart_dereference to return hex dump in place of undetected strings.
        - .disasm() routine now returns "[UNKNOWN]" when unable to process instruction.
        - Added get_register() routine to compliment set_register().
    pydasm:
        - Bundled new version of pydasm which manually fixes a memory leak that was affecting PaiMei.


09.13.2006 [REV 122]
    docs:
        - Fixed bug in PyDbg snippet example.
        - Added basic documentation for public-release FileFuzz GUI module.
    pida:
        - Fixed bugs in rendering of GML graphs.
    gui.filefuzz:
        - Added multi-byte modifications feature.
        - Fixed bug in statistic tracking.
    heap_trace:
        - Added tool for heap alloc/free tracking, useful for finding heap spray / memory leak vectors.
    pida: