@@ -253,7 +253,13 @@ EXCEPTION_DEBUG_INFO = _EXCEPTION_DEBUG_INFO
 # C:/PROGRA~1/MICROS~2/VC98/Include/winbase.h 645
 class _CREATE_THREAD_DEBUG_INFO(Structure):
     pass
-PTHREAD_START_ROUTINE = WINFUNCTYPE(DWORD, c_void_p)
+
+# macos compatability.
+try:
+    PTHREAD_START_ROUTINE = WINFUNCTYPE(DWORD, c_void_p)
+except:
+    PTHREAD_START_ROUTINE = CFUNCTYPE(DWORD, c_void_p)
+
 LPTHREAD_START_ROUTINE = PTHREAD_START_ROUTINE
 _CREATE_THREAD_DEBUG_INFO._fields_ = [
     # C:/PROGRA~1/MICROS~2/VC98/Include/winbase.h 645
